refactor(bookingms): SonarQube 指摘のコンストラクタパラメータ数とCollectors.toList()を修正する